--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -37,6 +37,9 @@ if has('nvim')
   " nnoremap <silent> gr    <cmd>lua vim.lsp.buf.references()<CR>
 endif
 
+" Coming from polyglot's markdown settings
+let g:vim_markdown_conceal = 0
+
 " Configuration for vim-lsc
 " let g:lsc_auto_map = v:true
 " let g:lsc_server_commands = { 'scala': 'metals-vim' }
