add in some aliases and some details about coc_status

--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -5,7 +5,7 @@
   "diagnostic.errorSign": "✘",
   "diagnostic.warningSign": "⚠ ",
   "metals.statusBarEnabled": true,
-  "metals.superMethodLenses": true
+  "metals.superMethodLensesEnabled": true
 
   // "coc.preferences.enableFloatHighlight": false,
   // Keep this in here for testing
