--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -1,9 +1,9 @@
 {
-  "metals.serverVersion": "0.8.5-SNAPSHOT",
+  "metals.serverVersion": "0.9.0",
   "coc.preferences.formatOnType": true,
   "codeLens.enable": true,
   "diagnostic.errorSign": "✘",
-  "diagnostic.warningSign": "⚠ ",
+  "diagnostic.warningSign": "",
   "metals.statusBarEnabled": true,
   "diagnostic.checkCurrentLine": true,
   "languageserver": {
