Ensure --no-remote-logging flag is present for Ammonite

--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "metals.serverVersion": "0.9.0+139-c169b4ce-SNAPSHOT",
+  "metals.serverVersion": "0.9.1-SNAPSHOT",
   "coc.preferences.formatOnType": true,
   "codeLens.enable": true,
   "diagnostic.errorSign": "✘",
