--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -1,10 +1,11 @@
 {
-  "metals.serverVersion": "0.9.0+177-e87c2312-SNAPSHOT",
+  "metals.serverVersion": "0.9.2-SNAPSHOT",
   "coc.preferences.formatOnType": true,
   "codeLens.enable": true,
   "diagnostic.errorSign": "✘",
   "diagnostic.warningSign": "",
   "metals.statusBarEnabled": true,
+  "metals.enableStripMarginOnTypeFormatting": true,
   "diagnostic.checkCurrentLine": true,
   "languageserver": {
     "lua": {
@@ -32,5 +33,6 @@
       "it",
       "describe"
     ]
-  }
+  },
+  "coc.preferences.extensionUpdateCheck": "daily"
 }
