Prepare for linux machine

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,9 @@
 # :TmuxlineSnapshot [file] to create a new snapshot file
-source-file ~/.flavor/tmux.snapshot
+#source-file ~/.flavor/tmux.snapshot
+
+set -g terminal-overrides ',xterm-256color:Tc'
 set -g default-terminal "xterm-256color"
+
 set -g escape-time 10
 
 set -g mouse on
@@ -17,3 +20,7 @@ bind-key '%' split-window -h -c '#{pane_current_path}'
 bind-key '"' split-window -v -c '#{pane_current_path}'
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# default statusbar colors
+#set-option -g status-bg colour241
+#set-option -g status-fg colour15
