--- a/vim/.config/nvim/coc-settings.json
+++ b/vim/.config/nvim/coc-settings.json
@@ -1,10 +1,12 @@
 {
-  "metals.serverVersion": "0.9.3+79-8bcafa59-SNAPSHOT",
-  //"metals.serverVersion": "0.9.4-SNAPSHOT",
+  "metals.serverVersion": "0.9.5-SNAPSHOT",
+  //"metals.serverVersion": "0.9.3+115-08650df6-SNAPSHOT",
+  //"metals.serverVersion": "0.9.4",
   "metals.excludedPackages": [
     "akka.actor.typed.javadsl",
     "com.github.swagger.akka.javadsl"
   ],
+
   "coc.preferences.formatOnType": true,
   "codeLens.enable": true,
   "diagnostic.errorSign": "✘",
@@ -42,8 +44,5 @@
   "coc.preferences.extensionUpdateCheck": "daily",
   "tsserver.log": "verbose",
   "tsserver.trace.server": "verbose",
-
-
-
 
 }
