--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,9 +18,19 @@ set -g visual-activity on
 # Allows you to split into the same directory you were in when you split
 bind-key '%' split-window -h -c '#{pane_current_path}'
 bind-key '"' split-window -v -c '#{pane_current_path}'
+bind-key 'r' source-file ~/.tmux.conf
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+set-option -g allow-rename off
+
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
 # default statusbar colors
-#set-option -g status-bg colour241
-#set-option -g status-fg colour15
+# set-option -g status-bg colour236
+# set-option -g status-fg colour145
