Lua all the things for nvim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,3 @@
-# :TmuxlineSnapshot [file] to create a new snapshot file
-#source-file ~/.flavor/tmux.snapshot
-
 set -g terminal-overrides ',xterm-256color:Tc'
 set -g default-terminal "xterm-256color"
 
@@ -32,5 +29,6 @@ setw -g monitor-activity off
 set -g bell-action none
 
 # default statusbar colors
-# set-option -g status-bg colour236
-# set-option -g status-fg colour145
+#set-option -g status-bg colour237
+set-option -g status-bg "#353644"
+set-option -g status-fg colour145
