Add in lua LSP setup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,5 @@
-set -g terminal-overrides ',xterm-256color:Tc'
+# Needed to be set if I ever go back to alacritty
+#set -g terminal-overrides ',xterm-256color:Tc'
 set -g default-terminal "xterm-256color"
 
 set -g escape-time 10
