--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,12 @@ set -g mouse on
 # Specific bindings
 unbind C-b
 set -g prefix C-a
+bind C-a send-prefix
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 setw -g monitor-activity on
 set -g visual-activity on
