Galaxyline is dead, so roll your own.
I said I'd never do this again, but here I am.
Also made the tmux bar match the statusline

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,5 +37,7 @@ set -g bell-action none
 
 # default statusbar colors
 #set-option -g status-bg colour237
-set-option -g status-bg "#353644"
-set-option -g status-fg colour145
+#set-option -g status-bg "#353644"
+set-option -g status-bg "#282C34"
+#set-option -g status-fg colour145
+set-option -g status-fg "#5C6370"
