Little pop of color in tmux because I'm fancy

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,6 +26,7 @@ bind-key 'r' source-file ~/.tmux.conf
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+# don't override my names
 set-option -g allow-rename off
 
 # loud or quiet?
@@ -38,3 +39,9 @@ set -g bell-action none
 # default statusbar colors
 set-option -g status-bg "#282C34"
 set-option -g status-fg "#5C6370"
+
+# #I pane number
+# #W pane name
+# #F the little *
+# This just adds a little pop of color to make the asterics yellow
+setw -g window-status-current-format ' #I:#W#[fg=#e5c07b]#F '
