Minor changes to simplify tmuxline

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,8 +40,13 @@ set -g bell-action none
 set-option -g status-bg "#282C34"
 set-option -g status-fg "#5C6370"
 
-# #I pane number
 # #W pane name
 # #F the little *
 # This just adds a little pop of color to make the asterics yellow
-setw -g window-status-current-format ' #I:#W#[fg=#e5c07b]#F '
+setw -g window-status-current-format ' #W#[fg=#e5c07b]#F '
+
+# I honestly don't know why I have anything set here, just get rid of
+# everything no the right hand side. If I find I miss something I'll add it
+# back in, but something tells me that I probably won't. I'm getting pretty
+# close to just getting rid of the entire thing and tying to be like Begin
+set -g status-right ''
