Bunch of small updates for mappings and metals Migrate theme over to kanagawa Small cleanups

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,4 @@
-# Needed to be set if I ever go back to alacritty
-#set -g terminal-overrides ',xterm-256color:Tc'
+# colors are mimicking https://github.com/rebelot/kanagawa.nvim
 set -g default-terminal "xterm-256color"
 
 set -g escape-time 10
@@ -37,13 +36,13 @@ setw -g monitor-activity off
 set -g bell-action none
 
 # default statusbar colors
-set-option -g status-bg "#282C34"
-set-option -g status-fg "#5C6370"
+set-option -g status-bg "#1F1F28" # sumiInk1
+set-option -g status-fg "#727169" # fujiGray
 
 # #W pane name
 # #F the little *
 # This just adds a little pop of color to make the asterics yellow
-setw -g window-status-current-format ' #W#[fg=#e5c07b]#F '
+setw -g window-status-current-format ' #W#[fg=#98BB6C]#F ' # springGreen
 
 # I honestly don't know why I have anything set here, just get rid of
 # everything no the right hand side. If I find I miss something I'll add it
