update wezterm stuff

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,8 @@
 # colors are mimicking https://github.com/rebelot/kanagawa.nvim
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm-256color"
+# Couldn't get the colors to work unless I was actually using wezterm here
+# https://wezfurlong.org/wezterm/config/lua/config/term.html?highlight=term#term--xterm-256color
+set -g default-terminal "wezterm"
 
 set -g escape-time 10
 
