--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# since we rebound l we set o to last window
+bind o last-window
+
 setw -g monitor-activity on
 set -g visual-activity on
 
